--- a/site-cookbooks/ohmyzsh/templates/default/zshrc.erb
+++ b/site-cookbooks/ohmyzsh/templates/default/zshrc.erb
@@ -38,4 +38,7 @@ source $ZSH/oh-my-zsh.sh
 
 # Customize to your needs...
 
+# ruby_build patch
+alias 'rbenv install'='curl -fsSL https://gist.github.com/mislav/a18b9d7f0dc5b9efc162.txt | rbenv install --patch'
+
 function chpwd() { ls -AF }
